Add CFBundleAllowMixedLocalizations to Sample app

--- a/Sources/SettingsHelper/Resources/en.lproj/Localizable.strings
+++ b/Sources/SettingsHelper/Resources/en.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "Credits" = "Credits";
 
 /* No comment provided by engineer. */
-"Data Privacy" = "Data XX";
+"Data Privacy" = "Data Privacy";
 
 /* No comment provided by engineer. */
 "FAQ" = "FAQ";
